outer wrapping div removed, z index of sidebar button fixed

--- a/assets/css/customization.css
+++ b/assets/css/customization.css
@@ -238,6 +238,7 @@ input[type="number"] {
 
   #sidebarexpandbtn {
     display: block;
+    z-index: 100;
   }
 
   .doccontent {
